--- a/src/global-styles.css
+++ b/src/global-styles.css
@@ -9,3 +9,25 @@ body {
 .highlighted {
   color: #fe8162;
 }
+*{
+  overflow-x: hidden;
+}
+::-webkit-scrollbar{
+  width: 0.6vw;
+}
+
+::-webkit-scrollbar-track{
+  background: linear-gradient(to bottom, #fde4d7, #ffffff, #fde4d7);
+  border: 5pxs;
+}
+
+::-webkit-scrollbar-thumb{
+  background: #fe8162;
+  height: 5vh;
+}
+
+::-webkit-scrollbar-thumb:hover{
+  background: #fe8162;
+  height: 5vh;
+ 
+}
